[gd_scene load_steps=7 format=2]

[ext_resource path="res://Objects/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Door.tscn" type="PackedScene" id=2]
[ext_resource path="res://Imports/Laboratory.tres" type="TileSet" id=3]
[ext_resource path="res://Qingyue/Level2.gd" type="Script" id=4]
[ext_resource path="res://Qingyue/enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://Qingyue/npc.tscn" type="PackedScene" id=6]

[node name="Level2" type="Node2D"]
position = Vector2( 108, 91 )
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -384.0
margin_top = -327.0
margin_right = 896.0
margin_bottom = 505.0
color = Color( 0, 0, 0, 1 )

[node name="LabFloor" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
cell_y_sort = true
format = 1
tile_data = PoolIntArray( 0, -1073741765, 0, 1, -1073741765, 0, 2, -1073741765, 0, 3, -1073741765, 0, 4, -1073741765, 0, 5, -1073741765, 0, 6, -1073741765, 0, 7, -1073741765, 0, 8, -1073741765, 0, 9, -1073741765, 0, 10, -1073741765, 0, 11, -1073741765, 0, 12, -1073741765, 0, 13, -1073741765, 0, 14, -1073741765, 0, 65536, -1073741765, 0, 65537, -1073741765, 0, 65538, -1073741765, 0, 65539, -1073741765, 0, 65540, -1073741765, 0, 65541, -1073741765, 0, 65542, -1073741765, 0, 65543, -1073741765, 0, 65544, -1073741765, 0, 65545, -1073741765, 0, 65546, -1073741765, 0, 65547, -1073741765, 0, 65548, -1073741765, 0, 65549, -1073741765, 0, 65550, -1073741765, 0, 131072, -1073741765, 0, 131073, -1073741765, 0, 131074, -1073741765, 0, 131075, -1073741765, 0, 131076, -1073741765, 0, 131077, -1073741765, 0, 131078, -1073741765, 0, 131079, -1073741765, 0, 131080, -1073741765, 0, 131081, -1073741765, 0, 131082, -1073741765, 0, 131083, -1073741765, 0, 131084, -1073741765, 0, 131085, -1073741765, 0, 131086, -1073741765, 0, 196608, -1073741765, 0, 196609, -1073741765, 0, 196610, -1073741765, 0, 196611, -1073741765, 0, 196612, -1073741765, 0, 196613, -1073741765, 0, 196614, -1073741765, 0, 196615, -1073741765, 0, 196616, -1073741765, 0, 196617, -1073741765, 0, 196618, -1073741765, 0, 196619, -1073741765, 0, 196620, -1073741765, 0, 196621, -1073741765, 0, 196622, -1073741765, 0, 262144, -1073741765, 0, 262145, -1073741765, 0, 262146, -1073741765, 0, 262147, -1073741765, 0, 262148, -1073741765, 0, 262149, -1073741765, 0, 262150, -1073741765, 0, 262151, -1073741765, 0, 262152, -1073741765, 0, 262153, -1073741765, 0, 262154, -1073741765, 0, 262155, -1073741765, 0, 262156, -1073741765, 0, 262157, -1073741765, 0, 262158, -1073741765, 0, 327680, -1073741765, 0, 327681, -1073741765, 0, 327682, -1073741765, 0, 327683, -1073741765, 0, 327684, -1073741765, 0, 327685, -1073741765, 0, 327686, -1073741765, 0, 327687, -1073741765, 0, 327688, -1073741765, 0, 327689, -1073741765, 0, 327690, -1073741765, 0, 327691, -1073741765, 0, 327692, -1073741765, 0, 327693, -1073741765, 0, 327694, -1073741765, 0, 393216, -1073741765, 0, 393217, -1073741765, 0, 393218, -1073741765, 0, 393219, -1073741765, 0, 393220, -1073741765, 0, 393221, -1073741765, 0, 393222, -1073741765, 0, 393223, -1073741765, 0, 393224, -1073741765, 0, 393225, -1073741765, 0, 393226, -1073741765, 0, 393227, -1073741765, 0, 393228, -1073741765, 0, 393229, -1073741765, 0, 393230, -1073741765, 0, 458752, -1073741765, 0, 458753, -1073741765, 0, 458754, -1073741765, 0, 458755, -1073741765, 0, 458756, -1073741765, 0, 458757, -1073741765, 0, 458758, -1073741765, 0, 458759, -1073741765, 0, 458760, -1073741765, 0, 458761, -1073741765, 0, 458762, -1073741765, 0, 458763, -1073741765, 0, 458764, -1073741765, 0, 458765, -1073741765, 0, 458766, -1073741765, 0, 524288, -1073741765, 0, 524289, -1073741765, 0, 524290, -1073741765, 0, 524291, -1073741765, 0, 524292, -1073741765, 0, 524293, -1073741765, 0, 524294, -1073741765, 0, 524295, -1073741765, 0, 524296, -1073741765, 0, 524297, -1073741765, 0, 524298, -1073741765, 0, 524299, -1073741765, 0, 524300, -1073741765, 0, 524301, -1073741765, 0, 524302, -1073741765, 0, 589824, -1073741765, 0, 589825, -1073741765, 0, 589826, -1073741765, 0, 589827, -1073741765, 0, 589828, -1073741765, 0, 589829, -1073741765, 0, 589830, -1073741765, 0, 589831, -1073741765, 0, 589832, -1073741765, 0, 589833, -1073741765, 0, 589834, -1073741765, 0, 589835, -1073741765, 0, 589836, -1073741765, 0, 589837, -1073741765, 0, 589838, -1073741765, 0 )

[node name="Door" parent="." instance=ExtResource( 2 )]
position = Vector2( 241, -22 )

[node name="YSort" type="YSort" parent="."]

[node name="LabSmall" type="TileMap" parent="YSort"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
cell_y_sort = true
format = 1
tile_data = PoolIntArray( -1, 1610612784, 0, -65536, 68, 0, -65535, 68, 0, -65534, 68, 0, -65533, 68, 0, -65532, 68, 0, -65531, 68, 0, -65530, 68, 0, -65529, 68, 0, -65528, 68, 0, -65527, 68, 0, -65526, 68, 0, -65525, 68, 0, -65524, 68, 0, -65523, 39, 0, -65520, 68, 0, -65519, 68, 0, -65518, 68, 0, -65517, 68, 0, -65516, 68, 0, -65515, 68, 0, -65514, 68, 0, -65513, 68, 0, -65512, 68, 0, -65511, 68, 0, -65510, 68, 0, -65509, 68, 0, -65508, 68, 0, -65507, -1073741769, 0, -65506, -1073741776, 0, 65535, 1610612791, 0, 0, 68, 0, 12, 68, 0, 16, 68, 0, 17, 68, 0, 19, 6, 0, 22, 6, 0, 25, 6, 0, 27, 68, 0, 28, 68, 0, 30, 55, 0, 131071, 1610612791, 0, 65536, 68, 0, 65548, 68, 0, 65552, 68, 0, 65553, 68, 0, 65563, 68, 0, 65564, 68, 0, 65566, 55, 0, 196607, 1610612791, 0, 131072, 68, 0, 131084, 68, 0, 131100, 68, 0, 131102, 55, 0, 262143, 1610612791, 0, 196608, 68, 0, 196620, 68, 0, 196636, 68, 0, 196638, 55, 0, 327679, 1610612791, 0, 262144, 68, 0, 262156, 68, 0, 262172, 68, 0, 262174, 55, 0, 393215, 1610612791, 0, 327680, 68, 0, 327692, 68, 0, 327693, 68, 0, 327694, 68, 0, 327695, 68, 0, 327696, 68, 0, 327697, 68, 0, 327698, 68, 0, 327699, 68, 0, 327700, 68, 0, 327701, 68, 0, 327702, 68, 0, 327703, 68, 0, 327704, 68, 0, 327708, 68, 0, 327710, 55, 0, 458751, 1610612791, 0, 393216, 68, 0, 393228, 68, 0, 393230, 6, 0, 393232, 68, 0, 393240, 68, 0, 393244, 68, 0, 393246, 55, 0, 524287, 1610612791, 0, 458752, 68, 0, 458756, 68, 0, 458757, 68, 0, 458758, 68, 0, 458759, 68, 0, 458760, 68, 0, 458761, 68, 0, 458762, 68, 0, 458763, 68, 0, 458764, 68, 0, 458768, 68, 0, 458776, 68, 0, 458780, 68, 0, 458782, 55, 0, 589823, 1610612791, 0, 524288, 68, 0, 524304, 68, 0, 524312, 68, 0, 524316, 68, 0, 524318, 55, 0, 655359, 1610612791, 0, 589824, 68, 0, 589840, 68, 0, 589848, 68, 0, 589852, 68, 0, 589854, 55, 0, 720895, 1610612791, 0, 655360, 68, 0, 655376, 68, 0, 655384, 68, 0, 655388, 68, 0, 655390, 55, 0, 786431, 1610612791, 0, 720896, 68, 0, 720900, 68, 0, 720901, 68, 0, 720902, 68, 0, 720903, 68, 0, 720904, 68, 0, 720905, 68, 0, 720906, 68, 0, 720907, 68, 0, 720908, 68, 0, 720912, 68, 0, 720920, 68, 0, 720924, 68, 0, 720926, 55, 0, 851967, 1610612791, 0, 786432, 68, 0, 786438, 6, 0, 786441, 6, 0, 786444, 68, 0, 786448, 68, 0, 786456, 68, 0, 786460, 68, 0, 786462, 55, 0, 917503, 1610612791, 0, 851968, 68, 0, 851980, 68, 0, 851984, 68, 0, 851992, 68, 0, 851996, 68, 0, 851998, 55, 0, 983039, 1610612791, 0, 917504, 68, 0, 917516, 68, 0, 917517, 68, 0, 917518, 68, 0, 917519, 68, 0, 917520, 68, 0, 917521, 68, 0, 917522, 68, 0, 917526, 68, 0, 917527, 68, 0, 917528, 68, 0, 917532, 68, 0, 917534, 55, 0, 1048575, 1610612791, 0, 983040, 68, 0, 983068, 68, 0, 983070, 55, 0, 1114111, 1610612791, 0, 1048576, 68, 0, 1048604, 68, 0, 1048606, 55, 0, 1179647, 1610612791, 0, 1114112, 68, 0, 1114140, 68, 0, 1114142, 55, 0, 1245183, 1610612791, 0, 1179648, 68, 0, 1179649, 68, 0, 1179650, 68, 0, 1179651, 68, 0, 1179652, 68, 0, 1179653, 68, 0, 1179654, 68, 0, 1179655, 68, 0, 1179656, 68, 0, 1179657, 68, 0, 1179658, 68, 0, 1179659, 68, 0, 1179660, 68, 0, 1179661, 68, 0, 1179662, 68, 0, 1179663, 68, 0, 1179664, 68, 0, 1179665, 68, 0, 1179666, 68, 0, 1179667, 68, 0, 1179668, 68, 0, 1179669, 68, 0, 1179670, 68, 0, 1179671, 68, 0, 1179672, 68, 0, 1179673, 68, 0, 1179674, 68, 0, 1179675, 68, 0, 1179676, 68, 0, 1179678, 55, 0, 1310719, 1610612791, 0, 1245214, 55, 0, 1376255, -1610612688, 0, 1310720, -1610612681, 0, 1310721, -1610612681, 0, 1310722, -1610612681, 0, 1310723, -1610612681, 0, 1310724, -1610612681, 0, 1310725, -1610612681, 0, 1310726, -1610612681, 0, 1310727, -1610612681, 0, 1310728, -1610612681, 0, 1310729, -1610612681, 0, 1310730, -1610612681, 0, 1310731, -1610612681, 0, 1310732, -1610612681, 0, 1310733, -1610612681, 0, 1310734, -1610612681, 0, 1310735, -1610612681, 0, 1310736, -1610612681, 0, 1310737, -1610612681, 0, 1310738, -1610612681, 0, 1310739, -1610612681, 0, 1310740, -1610612681, 0, 1310741, -1610612681, 0, 1310742, -1610612681, 0, 1310743, -1610612681, 0, 1310744, -1610612681, 0, 1310745, -1610612681, 0, 1310746, -1610612681, 0, 1310747, -1610612681, 0, 1310748, -1610612681, 0, 1310749, -1610612681, 0, 1310750, 48, 0 )

[node name="LabLarge" type="TileMap" parent="YSort"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
cell_y_sort = true
format = 1

[node name="StaringPoint" type="Node2D" parent="YSort"]
position = Vector2( 470, 309 )

[node name="Player" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 240, 200 )

[node name="enemy" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 177, 64 )

[node name="enemy2" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 335, 112 )

[node name="npc" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 231, 136 )

[node name="npc2" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 89, 241 )

[node name="enemy3" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 240, 64 )

[node name="npc3" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 341, 39 )

[connection signal="PlayerAttack" from="YSort/enemy" to="." method="_on_enemy_PlayerAttack"]
[connection signal="PlayerAttack" from="YSort/enemy2" to="." method="_on_enemy2_PlayerAttack"]
[connection signal="beginTalk" from="YSort/npc" to="." method="_on_npc_beginTalk"]
[connection signal="body_entered" from="YSort/npc" to="." method="_on_npc_body_entered"]
[connection signal="endTalk" from="YSort/npc" to="." method="_on_npc_endTalk"]
[connection signal="beginTalk" from="YSort/npc2" to="." method="_on_npc2_beginTalk"]
[connection signal="body_entered" from="YSort/npc2" to="." method="_on_npc2_body_entered"]
[connection signal="endTalk" from="YSort/npc2" to="." method="_on_npc2_endTalk"]
[connection signal="body_entered" from="YSort/enemy3" to="." method="_on_enemy3_body_entered"]
[connection signal="beginTalk" from="YSort/npc3" to="." method="_on_npc3_beginTalk"]
[connection signal="body_entered" from="YSort/npc3" to="." method="_on_npc3_body_entered"]
[connection signal="endTalk" from="YSort/npc3" to="." method="_on_npc3_endTalk"]
